--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="button-wrapper">
-        <a href="{% url 'stats' %}" class="view-unwrapped">VIEW UNWRAPPED</a>
+        <a class="view-unwrapped">VIEW UNWRAPPED</a>
     </div>
 </div>
 {% endblock %}
