took rainbow out of default background

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+
+    <style>
+        body {
+            background-image: url("{% static 'home/background.png' %}");
+        }
+    </style>
+
     <div class="note-icons">
         <div class="note1">♪</div>
         <div class="note2">♫</div>
