--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 
         body {
             font-family: 'Notable', sans-serif;
-            background-image: url("{% static 'home/background.png' %}");
+            /* background-image: url("{% static 'home/background.png' %}"); */
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center top 100px;
