made top artist page use base.html, styled llm insight page

--- a/templates/topArtistAndSongs.html
+++ b/templates/topArtistAndSongs.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -10,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Notable&family=Radio+Canada:wght@700&display=swap" rel="stylesheet">
+</head>
+<body>
+    {% block content %}
 
     <style>
         /* Global Styles */
@@ -183,14 +187,6 @@
 
 
     </style>
-</head>
-<body>
-    <!-- Navigation Header -->
-    <div class="header">
-        <div class="menu-icon">☰</div>
-        <div class="title">UNWRAPPED</div>
-        <div class="profile">PROFILE</div>
-    </div>
 
     <!-- Page Title -->
     <div class="page-title">
@@ -253,5 +249,6 @@
             </div>
         </div>
     </div>
+    {% endblock %}
 </body>
 </html>
