--- a/templates/slide_2.html
+++ b/templates/slide_2.html
@@ -77,7 +77,7 @@
 
         .top-left {
             position: absolute;
-            top: 10px;
+            top: 0px;
             left: -100px;
             width: 200px;
             height: auto;
@@ -96,10 +96,39 @@
             color: #5AABF3;
             font-size: 36px;
             text-align: center;
-            margin-top: 125px;
+            margin-top: 115px;
+            padding-bottom: 25px;
             flex-grow: 1;
         }
 
+        .chart-and-artists {
+            display: flex;
+            flex-direction: row;
+            align-items: flex-start;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        .artist-record {
+            width: 70px;
+            height: auto;
+            padding-right: 10px;
+        }
+
+        .artist-label {
+            font-size: 22px;
+            padding-right: 20px;
+        }
+
+        .artist {
+            display: flex;
+            align-items: center;
+            padding-bottom: 50px;
+        }
+
+        .chart-legend {
+            padding-top: 50px;
+        }
     </style>
 </head>
 <body>
@@ -110,72 +139,86 @@
     </div>
 
     <div class="container">
-        <img src="{% static 'home/top_left_corner_rainbow.png' %}" alt="Rainbow" class="top-left">
-        <img src="{% static 'home/top_left_corner_rainbow.png' %}" alt="Rainbow" class="bottom-right">
+        <img src="{% static 'slide_2/top_left_corner_rainbow.png' %}" alt="Rainbow" class="top-left">
+        <img src="{% static 'slide_2/top_left_corner_rainbow.png' %}" alt="Rainbow" class="bottom-right">
         <div class="slide-title">Your Top 3 Artists Over Time</div>
-        <canvas id="artistRankings" style="width:100%;max-width:1000px"></canvas>
-        <script>
-            const xValues = [["over the", "last year"], ["over the last", "six months"], ["over the", "last month"]];
+        <div class="chart-and-artists">
+            <canvas id="artistRankings" style="width:100%;max-width:1000px"></canvas>
+            <script>
+                const top3Artists = JSON.parse('{{ top_3_artists | escapejs }}');
+                const artistLabels = Object.keys(top3Artists);
+                const artistData = Object.values(top3Artists);
 
-            new Chart("artistRankings", {
-                type: "line",
-                data: {
-                    labels: xValues,
-                    datasets: [{
-                        data: [1, 3, 7],
-                        borderColor: "#EF6E53",
-                        fill: false
-                    },{
-                        data: [2, 5, 5],
-                        borderColor: "#DDC371",
-                        fill: false
-                    },{
-                        data: [4, 2, 1],
-                        borderColor: "#2A9D90",
-                        fill: false
-                    }]
-                },
-                options: {
-                    legend: {
-                        display: false,
-                        labels: {
-                            fontFamily: 'Notable'
-                        }
+                const xValues = [["over the", "last year"], ["over the last", "six months"], ["over the", "last month"]];
+
+                const datasets = artistLabels.map((artist, index) => ({
+                    label: artist,
+                    data: artistData[index],
+                    borderColor: index === 0 ? "#EF6E53" : index === 1 ? "#DDC371" : "#2A9D90",
+                    fill: false
+                }));
+
+                new Chart("artistRankings", {
+                    type: "line",
+                    data: {
+                        labels: xValues,
+                        datasets: datasets
                     },
-                    scales: {
-                        xAxes: [{
-                            ticks: {
-                                fontFamily: 'Notable',
-                                fontSize: 15,
-                                fontColor: "#473924",
-                            },
-                        }],
-                        yAxes: [{
-                            ticks: {
-                                fontFamily: 'Notable',
-                                fontColor: "#473924",
-                                fontSize: 15,
-                            },
-                            scaleLabel: {
-                                display: true,
-                                labelString: "Ranking",
-                                fontFamily: 'Notable',
-                                fontColor: "#473924",
-                                fontSize: 21,
+                    options: {
+                        legend: {
+                            display: false,
+                        },
+                        scales: {
+                            xAxes: [{
+                                ticks: {
+                                    fontFamily: 'Notable',
+                                    fontSize: 15,
+                                    fontColor: "#473924",
+                                },
+                            }],
+                            yAxes: [{
+                                ticks: {
+                                    fontFamily: 'Notable',
+                                    fontColor: "#473924",
+                                    fontSize: 15,
+                                    reverse: true,
+                                },
+                                scaleLabel: {
+                                    display: true,
+                                    labelString: "Ranking",
+                                    fontFamily: 'Notable',
+                                    fontColor: "#473924",
+                                    fontSize: 21,
+                                }
+                            }]
+                        },
+                        layout: {
+                            padding: {
+                                left: 70,
+                                right: 70,
+                                bottom: 70,
+                                top: 40
                             }
-                        }]
-                    },
-                    layout: {
-                        padding: {
-                            left: 70,
-                            right: 70,
-                            bottom: 70,
-                            top: 40
                         }
                     }
-                }
-            });
-        </script>
+                });
+            </script>
+
+            <div class="chart-legend">
+                <div class="artist">
+                    <img src="{% static 'slide_2/salmon_record.png' %}" class="artist-record">
+                    <label class="artist-label">{{artist1}}</label>
+                </div>
+                <div class="artist">
+                    <img src="{% static 'slide_2/gold_record.png' %}" class="artist-record">
+                    <label class="artist-label">{{artist2}}</label>
+                </div>
+                <div class="artist">
+                    <img src="{% static 'slide_2/teal_record.png' %}" class="artist-record">
+                    <label class="artist-label">{{artist3}}</label>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
