Added gray forward and back button to slideshow in top artist slide

--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="button-wrapper">
-        <a class="view-unwrapped">VIEW UNWRAPPED</a>
+        <a href="{% url 'top_artist' %}" class="view-unwrapped">VIEW UNWRAPPED</a>
     </div>
 </div>
 {% endblock %}
