Got button to work

--- a/templates/topArtistAndSongs.html
+++ b/templates/topArtistAndSongs.html
@@ -287,7 +287,10 @@
         </div>
     </div>
 
-    <img src="{% static 'topArtist/triangle_button.png' %}" class="forward-triangle-button">
+    <a href="{% url 'slide_2' %}">
+        <img src="{% static 'topArtist/triangle_button.png' %}" class="forward-triangle-button" alt="Forward Button">
+    </a>
+
     <img src="{% static 'topArtist/triangle_button.png' %}" class="backward-triangle-button">
 
     <img src="{% static 'topArtist/top_left_corner_rainbow.png' %}" class="bottom-corner-rainbow">
