--- a/templates/topArtistAndSongs.html
+++ b/templates/topArtistAndSongs.html
@@ -32,20 +32,23 @@
             background-position: center top;
             padding-top: 100px;
             overflow: hidden;
-
         }
 
         .top-corner-rainbow {
+            width: 300px;
+            height: 300px;
             position: absolute;
-            top: -180px;
-            left: -250px
+            top: -50px;
+            left: -150px;
         }
 
         .bottom-corner-rainbow {
+            width: 300px;
+            height: 300px;
             transform: rotate(180deg);
             position: absolute;
-            bottom: -250px;
-            right: -275px
+            bottom: -150px;
+            right: -150px;
         }
 
         /* Fixed Header */
