--- a/templates/topArtistAndSongs.html
+++ b/templates/topArtistAndSongs.html
@@ -25,7 +25,6 @@
 
         body {
             font-family: 'Notable', sans-serif;
-            /*background-image: url("{% static 'topArtist/background.png' %}");*/
             background-color: #FCF8F1;
             background-repeat: no-repeat;
             background-size: cover;
@@ -208,8 +207,8 @@
             position: absolute;
             width: 40px;
             height: 40px;
-            bottom: 5%;
-            right: 45%;
+            bottom: 3%;
+            right: calc(50% - 100px);
         }
 
         .backward-triangle-button {
@@ -217,8 +216,8 @@
             transform: rotate(180deg);
             width: 40px;
             height: 40px;
-            bottom: 5%;
-            right: 55%;
+            bottom: 3%;
+            right: calc(50% + 100px);
         }
 
 
