--- a/templates/base.html
+++ b/templates/base.html
@@ -237,10 +237,9 @@
     </div>
 
     <div class="sidebar" id="sidebar">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Contact</a>
+        <a href="{% url 'home' %}">Home</a>
+        <a href="{% url 'slide_2' %}">Most Popular Artists</a>
+        <a href="{% url 'llm_insights_page' %}">LLM Insights</a>
     </div>
 
     <script>
