readd profile page

--- a/templates/base.html
+++ b/templates/base.html
@@ -234,6 +234,7 @@
     <div class="header">
         <div class="menu-icon" onclick="toggleSidebar()">☰</div>
         <div class="title">UNWRAPPED</div>
+        <div class="profile">PROFILE</div>
     </div>
 
     <div class="sidebar" id="sidebar">
