added contact developers page

--- a/templates/base.html
+++ b/templates/base.html
@@ -243,6 +243,7 @@
         <a href="{% url 'top_artist' %}">Top Artists and Top Songs</a>
         <a href="{% url 'slide_2' %}">Top Artist Graph</a>
         <a href="{% url 'llm_insights_page' %}">LLM Insights</a>
+        <a href="{% url 'contact' %}">Contact</a>
     </div>
 
     <script>
