Fixed the dark mode of top artist page

--- a/templates/topArtistAndSongs.html
+++ b/templates/topArtistAndSongs.html
@@ -150,6 +150,15 @@
             width: 100%;
         }
 
+        .dark-mode .song {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            background-color: #121212;
+            padding: 40px 15px;
+            width: 100%;
+        }
+
         .vinyl-icon-red {
             width: 100px;
             height: 100px;
@@ -180,10 +189,23 @@
             margin: 0;
         }
 
+        .dark-mode .song-details h3 {
+            font-size: 25px;
+            color: #E0E0E0;
+            margin: 0;
+        }
+
         .song-details p {
             font-family: 'Radio Canada', sans-serif;
             font-size: 16px;
             color: #000000;
+            margin: 0;
+        }
+
+        .dark-mode .song-details p {
+            font-family: 'Radio Canada', sans-serif;
+            font-size: 16px;
+            color: #E0E0E0;
             margin: 0;
         }
 
