--- a/templates/topArtistAndSongs.html
+++ b/templates/topArtistAndSongs.html
@@ -266,6 +266,7 @@
 
                     <div class="vinyl-icon-yellow"></div>
                 </div>
+
                 <div class="song">
                     <div class="song-details">
                         <h3>Mean It</h3>
@@ -283,7 +284,16 @@
 
     <div class="circle-container">
         <div class="darker-small-circle"></div>
+        <div class="small-circle"></div>
+        <div class="small-circle"></div>
+        <div class="small-circle"></div>
+        <div class="small-circle"></div>
+        <div class="small-circle"></div>
+        <div class="small-circle"></div>
+        <div class="small-circle"></div>
     </div>
+
+    <img src="{% static 'topArtist/triangle_button.png' %}" class="backward-triangle-button" alt="Forward Button">
 
     <img src="{% static 'topArtist/top_left_corner_rainbow.png' %}" class="bottom-corner-rainbow">
 
