pulled images based on user mood

--- a/templates/LLMinsights.html
+++ b/templates/LLMinsights.html
@@ -99,18 +99,18 @@
 
         .artist-info {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             align-items: center;
         }
 
         .artist-image {
-            width: 80px;
-            height: 200px;
+            width: 400px;
+            height: 400px;
         }
 
         .artist-vinyl {
             width: 160px;
-            height: 400px;
+            height: 390px;
         }
 
         .top-artist-section h2 {
@@ -196,7 +196,8 @@
         <!-- Top Artist Section on the Left -->
         <div class="top-artist-section">
             <div class="artist-info">
-                <img src="{% static 'topArtist/album_cover_record.png' %}" class="artist-vinyl">
+                    <img src="{% static songPath %}" class="artist-image">
+                    <img src="{% static 'topArtist/album_cover_record.png' %}" class="artist-vinyl">
             </div>
         </div>
 
