--- a/templates/ads_minutes.html
+++ b/templates/ads_minutes.html
@@ -89,6 +89,7 @@
                 font-family: 'Radio Canada Big', sans-serif;
                 font-size: 24px;
                 margin-top: 30px;
+                color: black;
             }
 
         </style>
