--- a/templates/base.html
+++ b/templates/base.html
@@ -303,6 +303,15 @@
 
         document.getElementById('dark-mode-btn').onclick = function() {
             document.body.classList.toggle('dark-mode');
+
+            if (document.body.classList.contains('dark-mode')) {
+                localStorage.setItem('dark_mode', 'on');
+                console.log('dark mode on');
+            } else {
+                localStorage.setItem('dark_mode', 'off');
+                console.log("dark mode off");
+                console.log(localStorage.getItem('dark_mode'));
+            }
         };
     </script>
 
