--- a/templates/slide_2.html
+++ b/templates/slide_2.html
@@ -114,6 +114,17 @@
 
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
+
+        </script>
+
+        <script>
+            document.addEventListener("DOMContentLoaded", function() {
+                if (localStorage.getItem('dark_mode') === 'on') {
+                    document.body.classList.add('dark-mode');
+                    console.log('dark mode on');
+                    // add dark mode to all items
+                }
+            })
         </script>
 
         <img src="{% static 'slide_2/top_left_corner_rainbow.png' %}" alt="Rainbow" class="top-left">
